--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -1,10 +1,4 @@
 // Primary Features
-// main {
-//   p {
-//     max-width: 75ch;
-//   }
-// }
-
 .intro {
   display: grid;
   place-items: center;
@@ -92,6 +86,9 @@ li::marker {
 table {
   border-collapse: collapse;
   margin-block: 1em;
+  font-size: 80%;
+  margin-inline: auto;
+  width: min(100%, 960px);
 }
 
 th,
@@ -111,7 +108,7 @@ td {
 
 th:first-child,
 td:first-child {
-  padding-left: 0.5em;
+  padding-left: 0.125em;
 }
 
 th:last-child,
@@ -126,9 +123,10 @@ tr th {
 // Accordion
 details {
   display: flex;
-  width: 100%;
+  width: min(100%, 960px);
   flex-direction: column;
   align-items: flex-start;
+  margin-inline: auto;
   padding: 0.75em 1em;
   margin-bottom: 0.5em;
   border: 1px solid;
@@ -171,5 +169,5 @@ details[open] summary::after {
 }
 
 details[open] summary::before {
-  content: "-";
+  content: "–";
 }
