--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -21,6 +21,7 @@ h5 {
 .logo {
   font-family: var(--serif);
   font-weight: 900;
+  font-size: 85%;
   display: flex;
   align-items: center;
   text-transform: uppercase;
